[package]
name = "odd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "1.2.0"
async-recursion = "0.3.2"
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.10.1", features = ["full"] }
